# AOC2023Python

./: README.md  pyproject.toml
aoc2023python/: day01.py  day02.py  day03.py  day04.py  helper.py
aoc2023python/data/: __init__.py
aoc2023python/examples/: script.py
